# pointer-quest-web

./: .eslintignore  .eslintrc.json  .tsbuildinfo  3D_OPTIMIZATION_REPORT.md  ACCESSIBILITY_AUDIT_REPORT.md  ACCESSIBILITY_IMPLEMENTATION_COMPLETE.md  ACCESSIBILITY_IMPLEMENTATION_PLAN.md  COMPLETED_MIGRATION.md  DEPLOYMENT.md  GUIA_DE_USO_COMPLETA.md  MIGRATION_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  REPORTE_FINAL_DEPLOYMENT.md  STUDENT_PROGRESS_SYSTEM.md  WCAG_2.1_AA_COMPLIANCE_REPORT.md  analyze-bundle.sh  config.json  filtra-errores.ps1  fix-jsx-errors.js  fix-jsx-systematic.py  lint-results.txt  optimize-threejs.sh  package-lock.json  package.json  test-accessibility.js  tsconfig.json
pointer-quest-wasm/: Cargo.toml
pointer-quest-wasm/src/: lib.rs
public/: index.html  manifest.json  offline.html  sw.js
scripts/: accessibility-audit.js  add-ds-imports.js  fix-interactive-closings.js  fix-migration-issues.js  migrate-lessons-to-design-system.js  migration-log.json  remove-ds-button-import.js  remove-ds-collisions.js  wrap-codeblock.js
src/: App.tsx  index.css  index.tsx
src/3d/: ConstPointer3D.tsx  EducationalPointerScene.tsx  FunctionPointer3D.tsx  MemoryLifecycleVisualizer.tsx  MemoryVisualizer3D.tsx  PointerArithmetic3D.tsx  SmartPointerVisualizations.tsx
src/__tests__/: components.bulk-smoke.test.tsx
src/accessibility/: AccessibilityManager.tsx
src/components/: AccessibilityAuditor.tsx  AccessibilityPanel.tsx  Accessible3DVisualization.tsx  Navbar.tsx  (+30 more)
src_backup_20250827_051648/: App.test.tsx  setupTests.ts  setupTestsPolyfills.ts
(+276 files in other folders)
