[package]
name = "pointer-quest-wasm"
version = "0.1.0"
edition = "2021"
description = "Motor de animaciones y procesamiento de alto rendimiento para Pointer Quest Web"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Performance"
]}
wasm-bindgen-futures = "0.4"
futures = "0.3"
